# QuarkNet

./: README.md  pyproject.toml
src/examples/: a.py  fizz_buzz.ipynb  mnist.ipynb  xor.ipynb
src/quarknet/: __init__.py  activations.py  data.py  layers.py  loss.py  nn.py  optim.py
tests/: test_core.py
