[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[project]
name = "quarknet"
version = "0.1.2"
description = "QuarkNet is a NumPy-only neural network library built from scratch for experimenting with fully connected feedforward networks."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["backpropagation", "deep-learning", "machine-learning", "neural-networks", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
"Repository" = "https://github.com/Sai-Suraj-27/QuarkNet"
"Issues"     = "https://github.com/Sai-Suraj-27/QuarkNet/issues"
"Homepage"   = "https://github.com/Sai-Suraj-27/QuarkNet"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
